css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap');


/*------GENERAL-----*/

* {
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

.body {
    display:flex;
    flex-direction:column;
    min-height:100vh;
    display:block;
}

body {
    background-image: url(https://github.com/hess-sabina/01.1-TOP-landing-page-zelda/blob/main/img/Zelda-Background.jpeg?raw=true);
    background-position:center;
    background-size: cover;
    background-attachment: fixed;
    height:100vh;
}

.headercontainer, .welcome, .bluecontainersection, .quote, .signupsection, .footercontent {
    width:100%;
    max-width:1300px;
    margin-left:auto;
    margin-right:auto;
}


/* -----HEADER SECTION----- */

.headercontainer {
    display:flex;
    justify-content: space-between;
    align-items:center;
    flex-wrap:wrap;
}

header {
    background:rgba(0, 0, 0, 0.9);
    height:150px;
    position:sticky;
    top:0;
    z-index:999;
}

.logo img {
    height:100px;
}

.links {
    display:flex;
    margin-right:px;
}

.links a:hover {
    color:#FFFFFF;
}

a {
    margin-left:20px;
    color:#B99F65;
    font-size:25;
    font-weight:bold;
    text-decoration:none;
}

ul {
    list-style:none;
}


/*-------WELCOME--------*/


.main {
    flex:1;
}

.welcome-area {
    display:flex;
    flex-direction:row-reverse;
    justify-content:space-evenly;
    flex-basis:50%;
    flex-wrap:wrap;
    padding-bottom:70px;
    gap:70px;
    height:500px;
    margin-top:150px;
}

.welcome-area .text h1 {
    font-size:48px;
    font-weight:bolder;
    color:#B99F65;
    text-shadow:
    -1px -1px 0 #FFF,
	1px -1px 0 #000,
	-1px 1px 0 #000,
	1px 1px 0 #000;
}

.welcome .text p {
    font-size:22px;
    color:#000000;
    margin-top:-30px;
}

.button {
    display:block;
    color:#000000;
    background:#B99F65;
    border-radius: 5px;
    border:none;
    padding:8px 28px;
    cursor:pointer;
    height:40px;
    width:110px;
}

.button:hover {
    color:#FFFFFF;
    background: #B99F65;
}


/*-------BLUECONTAINERSECTION--------*/


.bluecontainers {
	display:flex;
	justify-content:space-between;
	gap:40px;
}

.images img {
	width:auto;
	height:300px;
	margin-top:0px;
}

.bluecontainertitle {
    font-size:48px;
    color:#b99f65;
    text-align:center;
    text-shadow:
	-1px -1px 0 #FFF,
	1px -1px 0 #000,
	-1px 1px 0 #000,
	1px 1px 0 #000;
}

.bluetext {
    font-family:'Roboto', sans-serif;
    font-size: 22px;
    color: black;
    margin-top:-50px;
    margin-bottom:150px;
}


/*-------QUOTE--------*/

.quotesection {
    background:rgba(0, 0, 0, 0.8);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items:center;
    height: 400px;
 }

 .quote {
    font-size:37px;
    font-weight:300;
    font-style:italic;
    color:#B99F65;
    display:flex;
    justify-content:center;
}

.author {
    font-size:28px;
    font-weight:bold;
    margin-top:-10px;
    margin-left:1000px;
    color:white;
}


/*-------SIGNUP--------*/

.signupcontainer {
    display:flex;
    flex-direction:row;
    justify-content:space-around;
    align-items:center;
    height:150px;
    width:1190px;
    margin-top:120px;
    margin-bottom:120px;
    background:rgba(0, 0, 0, 0.8);
    border-radius:10px;
}

.calltoaction h3 {
    font-size:20px;
    font-weight:700;
    color:#b99f65;
}

.calltoaction p{
    font-size: 18px;
    color:#FFFFFF;
    margin-top:-15px;
}

.ctabutton{
    background-color:#B99F65;
    color:#000000;
    font-size:15px;
    border-radius:5px;
    border-color:#b99f65;
    border-style:solid;
    width:110px;
    height:40px;
    cursor:pointer;
}

.ctabutton:hover {
    color: white;
    background-color:#b99f65;
}


/*-------FOOTER--------*/

footer {
    background:rgba(0, 0, 0, 0.8);
    color:#B99F65;
    font-size:18px;
    font-weight:50;
    height:120px;
}

.footercontent {
    display:flex;
    justify-content:center;
    align-items:center;
    height:120px;
}

